@@ -1,3 +1,12 @@
+2011-01-27  Tobias Burnus  <burnus@net-b.de>
+
+	Backport from mainline
+	2011-02-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/47886
+	* testsuite/libgomp.fortran/task3.f90: New test.
+	
+
 2011-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline
