@@ -1,3 +1,12 @@
+2011-01-27  Tobias Burnus  <burnus@net-b.de>
+
+	Backport from mainline
+	2011-02-26  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/47886
+	* openmp.c (gfc_resolve_omp_directive): Resolve if()
+	condition of OpenMP's task.
+
 2011-02-19  Tobias Burnus
 
 	PR fortran/47775
